Stretch out the background images from side to side. Still can't keep the footer fixed at the bottom.

--- a/Skeleton-2.0.4/css/skeleton.css
+++ b/Skeleton-2.0.4/css/skeleton.css
@@ -34,7 +34,9 @@
   max-width: 960px;
   margin: 0 auto;
   padding: 0 20px;
-  box-sizing: border-box; }
+  box-sizing: border-box;
+}
+
 .column,
 .columns {
   width: 100%;
@@ -431,15 +433,19 @@ hr {
 }
 
 .hero{
-  color: purple;
+  color: aqua;
 }
 
 .hero-img {
-  margin: 0 auto;
-  max-width: 100%;
+  width: 100%;
   position: absolute;
 }
 
+.last-section-img {
+  width: 100%;
+  position: absolute;
+  padding-bottom: 5%;
+}
 /*Third attempt to make hero image strech out.*/
 /*.hero-img {
   background-image: url (../image/images/Chickee Logo- White-02.png)
@@ -449,13 +455,6 @@ hr {
   background-size: cover;
   position: relative;
 }*/
-
-.centered {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-}
 
 .showcase-img{
   position: relative;
@@ -476,15 +475,28 @@ hr {
   color: green;
 }
 
+.centered-text{
+  margin-top: 15%;
+  text-align: center;
+}
 .midsection2{
   color: blue;
 }
 
 .footer{
-  bottom:0;
+  padding-top: 15px;
+  background-color: blue;
   color: red;
+  position: relative;
+  bottom: 0;
+  clear: both;
+
 }
 
+i{
+  font-size:25px;
+  color: white;
+}
 
 /* Media Queries
 –––––––––––––––––––––––––––––––––––––––––––––––––– */
